--- a/frontend/wwwroot/scss/shared/_interactive_elements.scss
+++ b/frontend/wwwroot/scss/shared/_interactive_elements.scss
@@ -13,14 +13,15 @@
 
 // Define CSS variable for breakpoint
 .fullscreen-interactive {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000; /* Ensure it's above other content */
-  background-color: red;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    /* Ensure it's above other content */
+    background-color: red;
 }
 
 // -----------------------
@@ -30,18 +31,17 @@ button {
     @extend .roboto-light;
 }
 
-.overlay__button {
-}
+.overlay__button {}
 
 .overlay__button--close {
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 50px;
-  line-height: 0.6em;
-  padding: 20px;
-  color: $color-secondary--light;
-  background: opacity-set($color-primary--dark, 90%);
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 50px;
+    line-height: 0.6em;
+    padding: 20px;
+    color: $color-secondary--light;
+    background: opacity-set($color-primary--dark, 90%);
 }
 
 // -----------------------
@@ -51,12 +51,14 @@ button {
     display: inline-block;
     position: relative;
 }
+
 .dropdown__button {
     display: flex;
     align-items: center;
     gap: 5px;
     padding: 5px;
 }
+
 .dropdown__content {
     position: fixed;
     top: 0;
@@ -75,15 +77,16 @@ button {
 
 /* For fullscreen mobile */
 .dropdown__content-wrapper {
-  //background: cyan;
+    //background: cyan;
 }
 
 .dropdown__content.dropdown__content--visible {
-  opacity: 1;
-  visibility: visible;
+    opacity: 1;
+    visibility: visible;
 }
+
 .dropdown__content-title {
-  padding: 5px;
+    padding: 5px;
 }
 
 /* Desktop */
@@ -120,75 +123,76 @@ button {
     }
 
 
-  .dropdown__content-wrapper {
-  }
+    .dropdown__content-wrapper {}
 }
 
 // -----------------------
 // Select
 // -----------------------
 .select {
-  display: inline-block;
-  position: relative;
+    display: inline-block;
+    position: relative;
 }
+
 .select__button {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  padding: 5px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 5px;
 }
+
 .select__content {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: pink;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1000;
-  transition: max-height 0.5s linear, opacity 0.2s linear;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: pink;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+    transition: max-height 0.5s linear, opacity 0.2s linear;
 }
 
 /* For fullscreen mobile */
 .select__content-wrapper {
-  background: cyan;
+    background: cyan;
 }
 
 .select__content.select__content--visible {
-  opacity: 1;
-  visibility: visible;
+    opacity: 1;
+    visibility: visible;
 }
+
 .select__content-title {
-  padding: 5px;
+    padding: 5px;
 }
 
 /* Desktop */
 @media (min-width: $breakpoint--desktop) {
-  .select__content {
-    position: absolute;
-    width: unset;
-    height: unset;
-    opacity: unset;
-    visibility: unset;
-    top: unset;
-    overflow-y: hidden;
-    overflow-x: visible;
-    max-height: 0;
-    min-width: max-content;
-    transition: max-height 0.5s linear;
-  }
+    .select__content {
+        position: absolute;
+        width: unset;
+        height: unset;
+        opacity: unset;
+        visibility: unset;
+        top: unset;
+        overflow-y: hidden;
+        overflow-x: visible;
+        max-height: 0;
+        min-width: max-content;
+        transition: max-height 0.5s linear;
+    }
 
-  .select:hover .select__content  {
-    max-height: 500px;
-  }
+    .select:hover .select__content {
+        max-height: 500px;
+    }
 
 
-  .select__content-wrapper {
-  }
+    .select__content-wrapper {}
 }
 
 // -----------------------
@@ -196,82 +200,90 @@ button {
 // -----------------------
 
 .slider {
-  display: inline-block;
+    display: inline-block;
 }
+
 .slider__content {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-  background: opacity-set($color-primary--dark, 0.99);
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    background: opacity-set($color-primary--dark, 0.99);
 }
 
 /* Directions */
 
 /* Slide in from the left */
 .slider__content--left {
-  top: 0;
-  left: -100vw;
-  transition: left .2s linear;
+    top: 0;
+    left: -100vw;
+    transition: left .2s linear;
 }
+
 .slider__content--left.slider__content--visible {
-  left: 0;
+    left: 0;
 }
 
 /* Slide in from the right */
 .slider__content--right {
-  top: 0;
-  left: 100vw;
-  transition: left .2s linear;
+    top: 0;
+    left: 100vw;
+    transition: left .2s linear;
 }
+
 .slider__content--right.slider__content--visible {
-  left: 0;
+    left: 0;
 }
 
 /* Slide in from the top */
 .slider__content--top {
-  top: -100vh;
-  left: 0;
-  transition: top .2s linear;
+    top: -100vh;
+    left: 0;
+    transition: top .2s linear;
 }
+
 .slider__content--top.slider__content--visible {
-  top: 0;
+    top: 0;
 }
 
 /* Slide in from the bottom */
 .slider__content--bottom {
-  top: 100vh;
-  left: 0;
-  transition: top .2s linear;
+    top: 100vh;
+    left: 0;
+    transition: top .2s linear;
 }
+
 .slider__content--bottom.slider__content--visible {
-  top: 0;
+    top: 0;
 }
 
 .slider__content.slider__content--visible {
-  left: 0;
+    left: 0;
 }
 
 // -----------------------
 // List
 // -----------------------
-.list {
-}
-.list__header {
-}
-.list__content {
-}
+.list {}
+
+.list__header {}
+
+.list__content {}
+
 .list__content--item {
-  padding-left: 20px;
-  list-style: none;
+    padding-left: 20px;
+    list-style: none;
 }
 
 // -----------------------
 // Table
 // -----------------------
+.table-wrapper {
+    overflow-x: auto;
+}
 table {
     border-collapse: collapse;
     //margin: 25px 0;
@@ -285,13 +297,14 @@ table thead tr {
     color: #ffffff;
     text-align: left;
 }
+
 table__sorting-arrow {
     fill: #ffffff;
 }
 
 table th,
 table td {
-    padding: 12px 15px;
+    padding: 10px 10px;
 }
 
 table tbody tr {
@@ -313,6 +326,7 @@ table tbody tr.active-row {
 .table__actions {
     //padding: 5px;
 }
+
 .table__actions:hover {
     fill: $color-secondary--main;
 }
